--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -339,9 +339,9 @@
 <li class="cnjnctn-col">Employee is required to travel in the course of their employment duties (step 2) </li>
 <li class="cnjnctn-col">Your employee kept the required records, and you received a copy to support these amounts. For example, receipts for:
 <ul  class="fa-ul">
-<li><span class="fas fa-check fa-li fa-lg text-success"></span> Airfare cost</li>
-<li><span class="fas fa-check fa-li fa-lg text-success"></span> Hotel cost</li>
-<li><span class="fas fa-check fa-li fa-lg text-success"></span> Meal cost</li>
+<li><span class="fas fa-check fa-li fa-lg text-success"></span> Airfare</li>
+<li><span class="fas fa-check fa-li fa-lg text-success"></span> Hotel</li>
+<li><span class="fas fa-check fa-li fa-lg text-success"></span> Meal</li>
 </ul>
 </li>
 <li class="cnjnctn-col">You can justify your position for the amount being reasonable </li>
@@ -376,14 +376,15 @@
 <li class="cnjnctn-col">You and your employee are <strong>at arm's length</strong> </li>
 <li class="cnjnctn-col">Your employee is in <strong>one</strong> of the following situation:
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col">Employee is:
-<ul><li>A teacher or professor who works part-time in a <a href="https://www.canada.ca/en/employment-social-development/programs/designated-schools.html">designated educational institution in Canada</a> and provides service to you as a teacher or professor </li>
-<li>The location of their employment is 80 kilometres or more from their home</li>
+<li class="cnjnctn-col">Employee is a teacher or professor who works part-time and <strong>all</strong> of the following apply:
+<ul class="list-unstyled cnjnctn-type-and">
+<li class="cnjnctn-col">Works in a <a href="https://www.canada.ca/en/employment-social-development/programs/designated-schools.html">designated educational institution in Canada</a> and provides service to you as a teacher or professor </li>
+<li class="cnjnctn-col">The location of their employment is 80 kilometres or more from their home</li>
 </ul></li>
-<li class="cnjnctn-col">Employee:
-<ul>
-<li>has other employment or carries on a business outside of their employment with you</li>
-<li> The location of their employment is 80 kilometres ore more from <strong>both</strong> their home <strong>and</strong> the place of the other employment or business</li>
+<li class="cnjnctn-col">Employee works part-time and <strong>all</strong> of the following apply:
+<ul class="list-unstyled cnjnctn-type-and">
+<li class="cnjnctn-col">Employee has other employment or carries on a business outside of their employment with you</li>
+<li class="cnjnctn-col">The location of their employment is 80 kilometres ore more from <strong>both</strong> their home <strong>and</strong> the place of the other employment or business</li>
 </ul></li></ul></li>
 
 <li class="cnjnctn-col">The amount of the allowance or the reimbursement is reasonable (step 3)</li>
