--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -378,7 +378,8 @@
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col">Employee is a teacher or professor who works part-time and <strong>all</strong> of the following apply:
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">Works in a <a href="https://www.canada.ca/en/employment-social-development/programs/designated-schools.html">designated educational institution in Canada</a> and provides service to you as a teacher or professor </li>
+<li class="cnjnctn-col">Works in a <a href="https://www.canada.ca/en/employment-social-development/programs/designated-schools.html">designated educational institution in Canada</a> </li>
+<li class="cnjnctn-col">Provides service to you as a teacher or professor </li>
 <li class="cnjnctn-col">The location of their employment is 80 kilometres or more from their home</li>
 </ul></li>
 <li class="cnjnctn-col">Employee works part-time and <strong>all</strong> of the following apply:
