--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -391,6 +391,8 @@
 <li class="cnjnctn-col">The amount of the allowance or the reimbursement is reasonable (step 3)</li>
 </ul>
 <p class="mrgn-tp-md">A <strong>thorough review of the facts in each specific situation</strong> must be done to determine if the benefit is taxable. </p>
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/technical-information/income-tax/income-tax-folios-index/series-1-individuals/folio-5-transfer-income-property-rights-third-parties/income-tax-folio-s1-f5-c1-related-persons-dealing-arms-length.html#toc4">Income Tax Folio S1-F5-C1, Related persons and dealing at arm's length</a></p>
+
 <h4>Taxable situation</h4>
 <p>If the allowance or the reimbursement you provide to your employee for travel expenses <strong>does not</strong> meet all of the conditions above, the benefit is taxable. </p>
 </details>
