--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
@@ -434,9 +434,9 @@ margin-left: 38px;
 <p>You must choose to use either the traditional method or the proxy method to calculate your expenditures for the tax year you’re claiming. Each method has its own advantages and disadvantages.</p>
 		 <dl class="dl-horizontal brdr-0">
   <dt>Traditional method</dt>
-  <dd>Using the traditional method, you must identify all your overhead and other expenditures in your calculation</dd>
+  <dd>Using the traditional method, you must identify all your overhead and other expenditures in your calculation of allowable expenditures</dd>
   <dt>Proxy method</dt>
-  <dd>Using the proxy method, you do not calculate your overhead, but instead use a substitute (or proxy) amount in your calculation</dd>
+  <dd>Using the proxy method, you do not calculate your overhead expenses, but instead use a substitute (or proxy) amount in your calculation of allowable expenditures</dd>
 </dl>
  
 
