--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
@@ -337,8 +337,8 @@ margin-left: 38px;
 <p>The portion of salary or wages you include must be based on the time employees spent on  SR&amp;ED activities and the tasks they performed, regardless of their job title. </p>
 
 <details>             
-<summary>Review tasks that may qualify as salary or wage expenditures</summary>
-<p>The following tasks are considered directly engaged in SR&amp;ED work:</p>
+<summary>Review tasks that are considered directly engaged in SR&amp;ED</summary>
+
 <ul>
   <li>Experimentation and analysis</li>
   <li>Support work of engineering, design, operations research, mathematical analysis, computer programming, data collection,  testing, or psychological research</li>
