--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -419,8 +419,9 @@
 
 <details><summary>Situation: Your employee is travelling <strong>outside of your municipality or metropolitan area</strong></summary>
 <h4 id="other2">Non-taxable situation</h4>
-<p>Under the Income Tax Act (ITA), if you provide a reasonable travel allowance (other than an allowance for the use of a motor vehicle) to your employee for travelling away from the municipality or metropolitan area where your establishment is located and where your employee ordinarily reports, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
+<p>Under the Income Tax Act (ITA), if you provide a reasonable travel allowance (other than an allowance for the use of a motor vehicle) to your employee for travelling <strong>outside of your municipality or metropolitan area</strong>, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
+<li class="cnjnctn-col">The travelling is from the municipality or metropolitan area where your establishment is located and where your employee ordinarily reports</li>
 <li class="cnjnctn-col">The expenses is related to the performance of their employment duties (step 2)</li>
 <li class="cnjnctn-col">The amount of the allowance or the reimbursement is reasonable (step 3)</li>
 </ul>
