--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -385,7 +385,7 @@
 <li class="cnjnctn-col">Employee works part-time and <strong>all</strong> of the following apply:
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">Employee has other employment or carries on a business outside of their employment with you</li>
-<li class="cnjnctn-col">The location of their employment is 80 kilometres ore more from <strong>both</strong> their home <strong>and</strong> the place of the other employment or business</li>
+<li class="cnjnctn-col">The location of their employment is 80 kilometres or more from <strong>both</strong> their home <strong>and</strong> the place of the other employment or business</li>
 </ul></li></ul></li>
 
 <li class="cnjnctn-col">The amount of the allowance or the reimbursement is reasonable (step 3)</li>
