--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -431,9 +431,11 @@
 
 <details><summary>Situation: Your employee is travelling <strong>within your municipality or metropolitan area</strong></summary>
 <h4 id="other">Non-taxable situation</h4>
-<p>Under the CRA's administrative policy, if you provide a travel allowance (other than an allowance related to the use of a vehicle) within a municipality or metropolitan area where your establishment is located and where your employee ordinarily reports, so your employee can perform their duties in a more efficient manner, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
+<p>Under the CRA's administrative policy, if you provide a reasonable travel allowance (other than an allowance related to the use of a vehicle) to your employee for travelling <strong>within a municipality or metropolitan area</strong>, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">The amount of the travel allowance is <strong>reasonable</strong>, for meal expenses this is generally up to $23 including taxes (higher amounts may be reasonable if the meal cost in a location is higher)</li>
+<li class="cnjnctn-col">The travelling is within a municipality or metropolitan area where your establishment is located and where your employee ordinarily reports</li>
+<li class="cnjnctn-col">The travelling is to make sure your employee can perform their duties in a more efficient manner </li>
+<li class="cnjnctn-col">The amount of the allowance is reasonable (step 3), for meal expenses this is generally up to $23 including taxes (higher amounts may be reasonable if the meal cost in a location is higher)</li>
 <li class="cnjnctn-col">You can justify your position regarding the amount being reasonable (step 3)</li>
  <li class="cnjnctn-col">You are the <strong>primary beneficiary</strong> of the allowance </li>
  <li class="cnjnctn-col">The travel allowance is not a form of additional remuneration and is not a form of tax avoidance</li>
