--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-4.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-4.html
@@ -212,8 +212,8 @@
 <p>To learn more about carrying back ITCs, review <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/investment-tax-credit-policy.html#s3_3_2">Section 2.3.2, SR&amp;ED ITC Policy</a>.</p>
 
 <h2 id="h5">Refundable ITC</h2>
-<p>Claimants may be able to have some or all of their SR&amp;ED ITC refunded. If an ITC isn&rsquo;t applied in the year to reduce income tax payable and is not carried back, it may be refunded.</p>
-<p>Most CCPCs can earn a refundable ITC at the enhanced rate of 35% on qualified expenditures up to their expenditure limit for the tax year. Individuals may get a partial refund of their ITC earned at 15%. Generally an  ITC can only be refunded in the year that the qualified expenditure occurred.</p>
+<p>Claimants may be able to have some or all of their SR&amp;ED ITC refunded. If there is no tax payable, the ITC earned for the year may be refunded.</p>
+<p>Most CCPCs can earn a refundable ITC calculated at the enhanced rate of 35% on qualified expenditures up to their expenditure limit for the tax year. Individuals may get a partial refund of their ITC earned at 15%. Generally an  ITC can only be refunded in the year that the qualified expenditure occurred.</p>
 <p>The refund rate varies depending on if the claimant is a corporation, an individual, a trust, or a partner in a partnership.</p>
 <details>             
 <summary>Review  ITC rates and refund rates</summary>
