--- a/sred/scientific-research-experimental-development-tax-incentive-program/how-submit.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/how-submit.html
@@ -125,7 +125,7 @@
 <p>To learn more about prescribed SR&amp;ED forms, review <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/filing-requirements-policy.html#toc3">Section 3, SR&amp;ED Filing Requirements Policy</a>.</p>
 
 		 <h2 id="h2">Reporting deadline</h2>
-<p>Your SR&amp;ED reporting deadline depends on your income tax filing due date. Your income tax filing due date depends on what type of claimant you are (individual, corporation, or trust). </p>
+<p>Your SR&amp;ED reporting deadline depends on your income tax filing due date. Your income tax filing due date depends on what type of taxpayer you are (individual, corporation, or trust). </p>
        
 <dl class="dl-horizontal brdr-0">            
 
