--- a/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.html
@@ -167,7 +167,7 @@
 </details>
 			 
 <h3>Find out when your deadline is</h3>
-<p>Your SR&amp;ED reporting deadline depends on your income tax filing due date. Your filing due date depends on what type of claimant you are (individual, corporation, or trust). </p>
+<p>Your SR&amp;ED reporting deadline depends on your income tax filing due date. Your filing due date depends on what type of taxpayer you are (individual, corporation, or trust). </p>
 			 
 <dl class="dl-horizontal brdr-0">            
 
