--- a/sred/scientific-research-experimental-development-tax-incentive-program/what-are.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/what-are.html
@@ -114,7 +114,7 @@
 <p> You can then pool these expenditures and use them to reduce  your net income for the current year or a future year.</p>
 <h3>Earn an investment tax credit (ITC) </h3>
 <p>You may earn an ITC to reduce your income tax payable for the year.</p>
-<p> Your business may claim an ITC at a basic rate of 15%. Some corporations may claim an ITC at the enhanced rate of 35%.</p>
+<p> Your business may earn an ITC at a basic rate of 15%. Some corporations may claim an ITC at the enhanced rate of 35%.</p>
 <p>Some organizations may also earn a refundable ITC.</p>
 
 		 
