--- a/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.html
@@ -278,7 +278,7 @@
 
 <hr class="brdr-bttm">
   <dt class="mrgn-bttm-lg">    
-    <p><strong>Self-employed Individuals</strong></p>
+    <p><strong>Individuals who have a business</strong></p>
     </dt>
   <dd>    
 	  <p>Your SR&amp;ED reporting deadline is 12&nbsp;months after your T1 Income Tax and Benefit Return is due.</p>
