--- a/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.html
@@ -310,7 +310,7 @@
   <li>How you calculated the associated expenditures </li>
 </ul>
 
-<h3>What records to keep</h3>
+<h3>What records and information to keep</h3>
 <p>Keep any information that will support your SR&amp;ED claim. </p>
 <p>Documentation that is dated, signed, and specific to the work performed is best. However, we  will accept various types of supporting records.</p>
 <details>
