--- a/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
@@ -137,7 +137,7 @@
 <h3>Lifecycle of an SR&amp;ED project</h3>		 
 <p>An SR&amp;ED project starts when you identify the need for a scientific or technological advancement that overcomes an uncertainty. If you find that you have several uncertainties, you may actually have several  SR&amp;ED projects. </p>
 
-<p>An SR&amp;ED project ends when new scientific or technological knowledge is gained, whether you were  successful in resolving the uncertainty or not. Your work may still be eligible even if the results you sought were not achieved.</p>
+<p>An SR&amp;ED project ends when new scientific or technological knowledge is gained, whether you were  successful in reaching your goal or not. Your work may still be eligible even if the results you sought were not achieved.</p>
 <p>After you have grouped your work into SR&amp;ED projects, you can then determine the related expenditures that you may claim for the year.</p>
 <p>While some SR&amp;ED projects can last several years, you may only claim the expenditures incurred during the tax year for which you are claiming. </p>
 <h2 id="h2">How to group eligible work into SR&amp;ED  projects </h2>
