--- a/sred/scientific-research-experimental-development-tax-incentive-program/get-form.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/get-form.html
@@ -137,7 +137,7 @@
 <h3>Requirements for partners in a partnership</h3>
 <p>When SR&amp;ED work is carried out by a partnership, some special requirements apply: </p>
 	<ul>
-		<li>A partnership&rsquo;s SR&amp;ED expenditures must be deducted in the calculation of the partnership&rsquo;s net income or loss in the tax year they are incurred</li>
+		<li>The entire amount in the partnership's pool of deductible SR&ED expenditures must be deducted in calculating the net income of the partnership in the year the expenditures are incurred</li>
 		<li>A partnership will not have a pool of SR&amp;ED expenditures to carry forward to future tax years </li>
 		<li>Partners in a partnership cannot include the partnership&rsquo;s SR&amp;ED expenditures in their own pool of deductible SR&amp;ED expenditures</li>
 	</ul>
