--- a/sred/scientific-research-experimental-development-tax-incentive-program/what-work.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/what-work.html
@@ -157,7 +157,7 @@
 </details>
 		 
 <h3>Experimental development<strong></strong></h3>
-<p>Experimental development is work that aims to generate  or discover technological knowledge or know-how in order to develop  or improve materials, devices, products, or  processes (including  incremental improvements).</p>
+<p>Experimental development is work that aims to generate  or discover technological knowledge or know-how in order to develop  or improve materials, devices, products, or  processes, including  incremental improvements.</p>
 <details>
   <summary>Example of experimental development</summary>
   <p>For example, experimental development could occur during the scale up and optimization of processes to enable large scale and rapid production of a vaccine.</p>
