--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -519,10 +519,8 @@
 <li class="cnjnctn-col">The trip was arranged as an incentive award trip for your employees or your customers</li>
 <li class="cnjnctn-col">Your employee acts as <strong>host</strong> for the incentive trip</li>
 <li class="cnjnctn-col">Your employee works directly in business activities <strong>at least 90%</strong> of each day (a substantial part)</li>
-
+<li class="cnjnctn-col">Your employee's travelling expenses are considered necessary to accomplish the business objectives of the trip. </li>
 </ul>
-
-<p>Your employee's travelling expenses are considered necessary to accomplish the business objectives of the trip. </p>
 
 <h4>Taxable situation</h4>
 <p>If the travel expenses paid for your employee acting as host of the incentive award trip <strong>does not</strong> meet all of the conditions above, the benefit is taxable. </p>
