--- a/payroll/calculate/benefit/what.html
+++ b/payroll/calculate/benefit/what.html
@@ -306,9 +306,9 @@
 <dd><div id="ajax-benefit">
 	<p>Your employee has received a benefit if you pay for or give something that is personal in nature:</p>
 
-<ul>
-<li>directly to your employee </li>
-<li>to a person who does not deal at arm's length with the employee (such as the employee's spouse, child, or sibling) </li>
+<ul class="fa-ul">	 
+<li><span class="fas fa-check fa-li text-success"></span> Directly to your employee </li>
+<li><span class="fas fa-check fa-li text-success"></span> To a person who does not deal at arm's length with the employee (such as the employee's spouse, child, or sibling) </li>
 </ul>
 <p>A benefit is a good or service you give, or arrange for a third party to give, to your employee such as free use of property that you own. A benefit includes an allowance or a reimbursement of an employee's personal expense.</p>
 </div>
@@ -317,16 +317,17 @@
 <dd><div id="ajax-allowance">
 <p>An allowance or an advance is any periodic or lump-sum amount that you pay to your employee on top of salary or wages, to help the employee pay for certain anticipated expenses without having them support the expenses. An allowance or advance is:</p>
 
-<ul>
-<li>usually an arbitrary amount that is predetermined without using the actual cost </li>
-<li>usually for a specific purpose </li>
-<li>used as the employee chooses, since the employee does not provide receipts  </li>
+<ul class="fa-ul">	 
+<li><span class="fas fa-check fa-li text-success"></span> Usually an arbitrary amount that is predetermined without using the actual cost </li>
+<li><span class="fas fa-check fa-li text-success"></span> Usually for a specific purpose </li>
+<li><span class="fas fa-check fa-li text-success"></span> Used as the employee chooses, since the employee does not provide receipts  </li>
 </ul>
 <p>An allowance can be calculated based on distance, time or something else, such as a motor vehicle allowance using the distance driven or a meal allowance using the type and number of meals per day.</p>
 </div></dd>
  <dt>Reimbursement</dt>
 <dd><div id="ajax-reimbursement">
-<p>A reimbursement is an amount you pay to your employee to repay expenses they incurred while carrying out the duties of employment. The employee has to keep proper records (detailed receipts) to support the expenses and give them to you.</p>
+<p>A reimbursement is an amount you pay to your employee to repay expenses they incurred while carrying out the duties of employment. </p>
+<p>The employee has to keep proper records (detailed receipts) to support the expenses and give them to you.</p>
 </div></dd>
 </dl>
 
@@ -337,10 +338,10 @@
 	<dd><div id="ajax-cash">
  <p>Includes:</p>
 
-<ul>
-<li>Physical currency </li>
-<li>Cheques </li>
-<li>Direct deposit </li>
+<ul class="fa-ul">
+<li><span class="fas fa-check fa-li text-success"></span> Physical currency </li>
+<li><span class="fas fa-check fa-li text-success"></span> Cheques </li>
+<li><span class="fas fa-check fa-li text-success"></span> Direct deposit </li>
 </ul>
 </div>
   </dd>
