--- a/payroll/calculate/benefit/what.html
+++ b/payroll/calculate/benefit/what.html
@@ -369,31 +369,31 @@
 	
 <p>Whether or not a benefit is taxable depends on:</p>
 
-<ul>
-<li>whether the employee or officer receives an economic advantage that can be measured in money </li>
-<li>whether the individual is the primary beneficiary of the benefit
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col">Whether the employee or officer receives an economic advantage that can be measured in money </li>
+<li class="cnjnctn-col">Whether the individual is the primary beneficiary of the benefit
   </li>
 </ul></li>
 <li><h3>Calculate the value of the benefit</h3>		 
-<ul>
-<li>The value of a benefit is generally its fair market value (FMV) </li>
-<li>This is the price that can be obtained in an open market between two individuals dealing at arm's length </li>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col">The value of a benefit is generally its fair market value (FMV) </li>
+<li class="cnjnctn-col">This is the price that can be obtained in an open market between two individuals dealing at arm's length </li>
 </ul>
 <p>GST/HST may need to be included in the value of the taxable benefit for income tax purposes. </p>
 		 </li>
 <li><h3>Calculate and withhold payroll deductions</h3>		
 		
-<ul>
-<li>The employee can be paid or provided the benefit in cash, non-cash or near-cash </li>
-<li>The manner in which the benefit is paid will affect the payroll deductions withheld </li>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col">The employee can be paid or provided the benefit in cash, non-cash or near-cash </li>
+<li class="cnjnctn-col">The manner in which the benefit is paid will affect the payroll deductions withheld </li>
 </ul></li>
 <li><h3>Report the benefit on a slip</h3>		
 		
 <p>You need to report the taxable benefit on a a slip in <strong>both</strong>:</p>
 
-<ul>
-<li><strong>Box 14 </strong>(Employment income) </li>
-<li>"<strong>Other information</strong>" area: the code used to report the benefit in the "<strong>Other information</strong>" area depends on the benefit received.  </li>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><strong>Box 14 </strong>(Employment income) </li>
+<li class="cnjnctn-col">"<strong>Other information</strong>" area: the code used to report the benefit in the "<strong>Other information</strong>" area depends on the benefit received.  </li>
 </ul></li>
 </ol>
 <h2 id="h_4">What is the CRA's administrative policy for the purpose of taxable benefits</h2>
