--- a/payroll/calculate/benefit/what.html
+++ b/payroll/calculate/benefit/what.html
@@ -369,13 +369,13 @@
 	
 <p>Whether or not a benefit is taxable depends on:</p>
 
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">Whether the employee or officer receives an economic advantage that can be measured in money </li>
 <li class="cnjnctn-col">Whether the individual is the primary beneficiary of the benefit
   </li>
 </ul></li>
 <li><h3>Calculate the value of the benefit</h3>		 
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">The value of a benefit is generally its fair market value (FMV) </li>
 <li class="cnjnctn-col">This is the price that can be obtained in an open market between two individuals dealing at arm's length </li>
 </ul>
@@ -383,7 +383,7 @@
 		 </li>
 <li><h3>Calculate and withhold payroll deductions</h3>		
 		
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">The employee can be paid or provided the benefit in cash, non-cash or near-cash </li>
 <li class="cnjnctn-col">The manner in which the benefit is paid will affect the payroll deductions withheld </li>
 </ul></li>
@@ -391,7 +391,7 @@
 		
 <p>You need to report the taxable benefit on a a slip in <strong>both</strong>:</p>
 
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><strong>Box 14 </strong>(Employment income) </li>
 <li class="cnjnctn-col">"<strong>Other information</strong>" area: the code used to report the benefit in the "<strong>Other information</strong>" area depends on the benefit received.  </li>
 </ul></li>
