--- a/payroll/calculate/benefit/index.html
+++ b/payroll/calculate/benefit/index.html
@@ -202,12 +202,13 @@
                            <td> <p><a href="travel-expenses.html">Travel expenses</a> <span class="label label-info">CVB - SME reviewing</span> </p>
 			<p>Includes:</p> 
 						   <ul>
-							 <li><a href="travel-expenses.html#part">Provided to a part-time employee</a></li>  
-							<li><a href="travel-expenses.html#agent">Provided to an employee who is a salesperson, an agent selling property or negotiating contracts for the employer</a></li>
-							<li><a href="travel-expenses.html#forces">Provided to a member of the Canadian Forces receiving travel and separation allowances under service regulations</a></li>
-							<li><a href="travel-expenses-transport.html">Provided to an employee who is transporting goods part of their employment duties</a></li>
+							 <li><a href="travel-expenses.html#part">Provided to an employee who works part-timeoye</a></li>  
+							<li><a href="travel-expenses.html#agent">Provided to an employee who is a salesperson, an agent selling property or negotiating contracts, or a member of the clergy</a></li>
+							<li><a href="travel-expenses.html#forces">Provided to a member of the Canadian Forces and it is for separation allowances under service regulations</a></li>
+							<li><a href="travel-expenses.html#outside">Provided to an employee who is travelling outside of your municipality or metropolitan area</a></li>
+							<li><a href="travel-expenses.html#inside">Provided to an employee who is travelling within your municipality or metropolitan area</a></li>
 							<li><a href="travel-expenses.html#spouse">Provided to an employee or their spouse (or a common-law partner) for a business trip</a> </li>
-							<li><a href="travel-expenses.html#host">Provided to an employee who is a host of an incentive award for a business trip</a></li>
+							<li><a href="travel-expenses.html#host">Provided to an employee who acts as host of an incentive award trip</a></li>
 						   </ul>
 
 </td>
