--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -397,7 +397,7 @@
 <p>If the allowance or the reimbursement you provide to your employee for travel expenses <strong>does not</strong> meet all of the conditions above, the benefit is taxable. </p>
 </details>
 
-<details><summary>Situation: Your employee is a <strong>salesperson</strong>, an <strong>agent selling property</strong> or <strong>negotiating contracts</strong> or a <strong>member of the clergy</strong></summary>
+<details><summary>Situation: Your employee is a <strong>salesperson</strong>, an <strong>agent selling property</strong> or <strong>negotiating contracts</strong>, or a <strong>member of the clergy</strong></summary>
 <h4 id="agent">Non-taxable situation</h4>
 <p>Under the Income Tax Act (ITA), if you paid an allowance or a reimbursement to your employee who is a <strong>salesperson, an agent selling property or negotiating contracts or a member of the clergy</strong> for travel expenses, the benefit is <strong>not </strong>taxable if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
@@ -418,7 +418,7 @@
 </details>
 
 <details><summary>Situation: Your employee is travelling <strong>outside of your municipality or metropolitan area</strong></summary>
-<h4 id="other2">Non-taxable situation</h4>
+<h4 id="outside">Non-taxable situation</h4>
 <p>Under the Income Tax Act (ITA), if you provide a reasonable travel allowance (other than an allowance for the use of a motor vehicle) to your employee for travelling <strong>outside of your municipality or metropolitan area</strong>, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">The travelling is from the municipality or metropolitan area where your establishment is located and where your employee ordinarily reports</li>
@@ -430,7 +430,7 @@
 </details>
 
 <details><summary>Situation: Your employee is travelling <strong>within your municipality or metropolitan area</strong></summary>
-<h4 id="other">Non-taxable situation</h4>
+<h4 id="inside">Non-taxable situation</h4>
 <p>Under the CRA's administrative policy, if you provide a reasonable travel allowance (other than an allowance related to the use of a vehicle) to your employee for travelling <strong>within a municipality or metropolitan area</strong>, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">The travelling is within a municipality or metropolitan area where your establishment is located and where your employee ordinarily reports</li>
