--- a/payroll/calculate/benefit/index.html
+++ b/payroll/calculate/benefit/index.html
@@ -202,7 +202,7 @@
                            <td> <p><a href="travel-expenses.html">Travel expenses</a> <span class="label label-info">CVB - SME reviewing</span> </p>
 			<p>Includes:</p> 
 						   <ul>
-							 <li><a href="travel-expenses.html#part">Provided to an employee who works part-timeoye</a></li>  
+							 <li><a href="travel-expenses.html#part">Provided to an employee who works part-time</a></li>  
 							<li><a href="travel-expenses.html#agent">Provided to an employee who is a salesperson, an agent selling property or negotiating contracts, or a member of the clergy</a></li>
 							<li><a href="travel-expenses.html#forces">Provided to a member of the Canadian Forces and it is for separation allowances under service regulations</a></li>
 							<li><a href="travel-expenses.html#outside">Provided to an employee who is travelling outside of your municipality or metropolitan area</a></li>
