--- a/payroll/calculate/benefit/index.html
+++ b/payroll/calculate/benefit/index.html
@@ -231,7 +231,7 @@
                            <td>Board, lodging, housing and utilities<br>Travel</td>
                         </tr> 
  		 <tr>
-                           <td><a href="clergy.html">Housing, utilities and travel expenses - Provided to a member of the clergy or of a religious order</a> <span class="label label-info">CVB - SME reviewing</span></td>
+                           <td><a href="clergy.html">Housing and utilities expenses - Provided to a member of the clergy or of a religious order</a> <span class="label label-info">CVB - SME reviewing</span></td>
                            <td>Board, lodging, housing and utilities<br>Travel</td>
                         </tr>			
 			    
