--- a/payroll/calculate/benefit/clergy.html
+++ b/payroll/calculate/benefit/clergy.html
@@ -302,8 +302,8 @@
 <p>The benefit may not be taxable if your employee is in <strong>one</strong> of the following special situations:</p>
 
 <ul>
-<li>Board and lodging: <a href="remote.html">Your employee is working in a remote location</a> </li>
-<li>Board and lodging: <a href="special-site.html">Your employee works at a special work site, including in a presribed zone</a>  </li>
+<li><a href="remote.html">Your employee is working in a remote location</a> </li>
+<li><a href="special-site.html">Your employee works at a special work site, including in a presribed zone</a>  </li>
 </ul>
 </div>
 
