--- a/payroll/calculate/benefit/clergy.html
+++ b/payroll/calculate/benefit/clergy.html
@@ -315,7 +315,7 @@
 </li>
 
 <li> <h3 id="step2">Determine if the benefit is taxable</h3>
-<p class="mrgn-bttm-lg">Generally, if you provide  an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or a <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimbursement&nbsp;<span class="far fa-question-circle"></span></a> for  <a href="#def" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">housing, utilities and travel expenses&nbsp;<span class="far fa-question-circle"></span></a> to your employee who is a member of the clergy or a religious order, the benefit is taxable. Depending on your situation, the benefit may not be taxable under the Income Tax Act. </p>
+<p class="mrgn-bttm-lg">Generally, if you provide  an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or a <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimbursement&nbsp;<span class="far fa-question-circle"></span></a> for  <a href="#def" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">housing and utilities expenses&nbsp;<span class="far fa-question-circle"></span></a> to your employee who is a member of the clergy or a religious order, the benefit is taxable. Depending on your situation, the benefit may not be taxable under the Income Tax Act. </p>
 <h4>Taxable situation</h4>
 <p>The benefit is taxable if you provide or pay on behalf of your employee the following:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -387,10 +387,10 @@
 <li><h3 id="step4">Determine if your employee is eligible for the clergy residence deduction</h3>	
 <p><strong>If your employee meets the conditions in step 3</strong>, your employee is eligible to claim the clergy residence deduction if <strong>all</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and ">
-<li class="cnjnctn-col"><p>The benefit is in respect to rent and utilities paid or the fair market value of the residence that:</p>
+<li class="cnjnctn-col"><p>The benefit is in respect to rent and utilities paid or the fair market value of the residence and <strong>one</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col">is paid on behalf of the member along with applicable utilities (electricity, heating, water, etc.)</li>
-<li class="cnjnctn-col">is owned and occupied by the member along with applicable utilities (electricity, heating, water, etc.)</li>
+<li class="cnjnctn-col">The benefit is paid on behalf of the member along with applicable utilities (electricity, heating, water, etc.)</li>
+<li class="cnjnctn-col">The residence is owned and occupied by the member along with applicable utilities (electricity, heating, water, etc.)</li>
 </ul></li>
 <li class="cnjnctn-col">Your employee meets the status and function conditions to be considered a member of the clergy or religous order (step 3)</li>
 <li class="cnjnctn-col">The reduction reasonably relate to the degree of disturbance that affects your employee</li>
