--- a/payroll/calculate/benefit/template-benefit.html
+++ b/payroll/calculate/benefit/template-benefit.html
@@ -116,15 +116,26 @@
 			<a href="automobile.html#gc-document-nav" class="visible-xs visible-sm">Automobile provided by the employer</a>
       </li>
 		
-
+  <li>
+			<a href="disability.html" class="hidden-xs hidden-sm">Benefits provided to an employee who has a severe or prolonged impairment (disability)</a>
+			<a href="disability.html#gc-document-nav" class="visible-xs visible-sm">Benefits provided to an employee who has a severe or prolonged impairment (disability)</a>
+      </li>
+		
+	 <li>
+			<a href="remote.html" class="hidden-xs hidden-sm">Board, lodging and travel expenses - Provided to an employee in remote locations </a>
+			<a href="remote.html#gc-document-nav" class="visible-xs visible-sm">Board, lodging and travel expenses - Provided to an employee in remote locations </a>
+      </li>
+		
 	  <li>
-			<a href="board-lodging-expenses.html" class="hidden-xs hidden-sm">Board and lodging expenses</a>
-			<a href="board-lodging-expenses.html#gc-document-nav" class="visible-xs visible-sm">Board and lodging expenses</a>
+			<a href="board-lodging-expenses.html" class="hidden-xs hidden-sm">Board, lodging, housing and utilities expenses</a>
+			<a href="board-lodging-expenses.html#gc-document-nav" class="visible-xs visible-sm">Board, lodging, housing and utilities expenses</a>
       </li>
-	<li>
-			<a href="clergy.html" class="hidden-xs hidden-sm">Board, lodging, housing and utilities expenses - Provided to a member of the clergy </a>
-			<a href="clergy.html#gc-document-nav" class="visible-xs visible-sm">Board, lodging, housing and utilities expenses - Provided to a member of the clergy </a>
+<li>
+			<a href="special-site.html" class="hidden-xs hidden-sm">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a>
+			<a href="special-site.html#gc-document-nav" class="visible-xs visible-sm">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a>
       </li>
+	
+
 	   <li>
 			<a href="cell.html" class="hidden-xs hidden-sm">Cell phone and internet services</a>
 			<a href="cell.html#gc-document-nav" class="visible-xs visible-sm">Cell phone and internet services</a>
@@ -138,10 +149,7 @@
 			<a href="counselling.html" class="hidden-xs hidden-sm">Counselling services and tax preparation</a>
 			<a href="counselling.html#gc-document-nav" class="visible-xs visible-sm">Counselling services and tax preparation</a>
       </li>
-	  <li>
-			<a href="disability.html" class="hidden-xs hidden-sm">Disability-related employment benefits</a>
-			<a href="disability.html#gc-document-nav" class="visible-xs visible-sm">Disability-related employment benefits</a>
-      </li>
+	
 		  <li>
 			<a href="education.html" class="hidden-xs hidden-sm">Educational assistance</a>
 			<a href="education.html#gc-document-nav" class="visible-xs visible-sm">Educational assistance</a>
@@ -164,6 +172,11 @@
 			<a href="gifts.html" class="hidden-xs hidden-sm">Gifts, awards, and long-service awards</a>
 			<a href="gifts.html#gc-document-nav" class="visible-xs visible-sm">Gifts, awards, and long-service awards</a>
       </li>	
+
+<li>
+			<a href="clergy.html" class="hidden-xs hidden-sm">Housing and utilities expenses - Provided to a member of the clergy or of a religious order</a>
+			<a href="clergy.html#gc-document-nav" class="visible-xs visible-sm">Housing and utilities expenses - Provided to a member of the clergy or of a religious order</a>
+      </li>
 	   <li>
 			<a href="insurance.html" class="hidden-xs hidden-sm">Insurance plans</a>
 			<a href="insurance.html#gc-document-nav" class="visible-xs visible-sm">Insurance plans</a>
@@ -251,16 +264,7 @@
 
 
 
-<li>
-			<a href="remote.html" class="hidden-xs hidden-sm">Travel, board and lodging expenses - Provided to an employee in remote locations</a>
-			<a href="remote.html#gc-document-nav" class="visible-xs visible-sm">Travel, board and lodging expenses - Provided to an employee in remote locations </a>
-      </li>
-<li>
-			<a href="special-site.html" class="hidden-xs hidden-sm">Travel, board and lodging expenses - Provided to an employee in special work site</a>
-			<a href="special-site.html#gc-document-nav" class="visible-xs visible-sm">Travel, board and lodging expenses - Provided to an employee in special work sites </a>
-      </li>
-
-	  
+  
 	  <li>
 			<a href="uniform.html" class="hidden-xs hidden-sm">Uniforms and protective clothing</a>
 			<a href="uniform.html#gc-document-nav" class="visible-xs visible-sm">Uniforms and protective clothing</a>
