--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-3.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-3.html
@@ -144,8 +144,8 @@
 		  <li>For detailed information, review <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4088/guide-form-t661-scientific-research-experimental-development-expenditures-claim-guide-form-t661.html#ln513">Line 513, T4088 guide to SR&ED Expenditures Claim</a>.</li>
 		  </ul>
 	<!--sub-list ends-->
-  <li>Other government or non-government assistance</li>
-  <li>Certain contract and third-party payments</li>
+  <li>Other types of government or non-government assistance</li>
+  <li>Certain contract payments and third-party payments</li>
   <li>Certain expenditures not allowed by regulations
     <details>
     <summary>What this may include</summary>
