--- a/sred/scientific-research-experimental-development-tax-incentive-program/support/claim-consultation.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/support/claim-consultation.html
@@ -113,12 +113,12 @@
   <h2>What  to expect</h2>
   <p>After examining the information you provide during the consultation, SR&amp;ED officers  will:</p>
   <ul type="disc">
-    <li>identify the research and development work that qualifies as&nbsp;SR&amp;ED</li>
+    <li>Determine if there is SR&amp;ED in your project(s)</li>
     <li>provide advice on the supporting documents you need to keep</li>
     <li>answer your questions</li>
     <li>offer advice and recommendations</li>
   </ul>
-  <p>If sufficient work has been undertaken, you will be provided with a written report confirming  that your work is SR&amp;ED. The report will not discuss the extent of eligible work or the allowable expenditures.</p>
+  <p>If sufficient work has been undertaken, you will be provided with a written report confirming whether there is SR&amp;ED in your project(s). The report will not discuss the extent of eligible work or the allowable expenditures.</p>
 
   <h2>Request a consultation</h2>
   <p>Fill out the Pre-claim  consultation request form:</p>
