Updated Proj info list

--- a/sred/scientific-research-experimental-development-tax-incentive-program/support/claim-consultation.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/support/claim-consultation.html
@@ -146,15 +146,15 @@
 
   <p>For each project, you must provide:</p>
   <ul>
-    <li>Project name </li>
-    <li>Brief project description  that includes:
+    <li>The project name </li>
+<li>The project&rsquo;s field of science or tecnology</li>
+	  <li>The goal of the project</li>
+    <li>A brief description of the scientific or technological knowledge available at the onset of the project as it relates to the project objective
       <ul>
-        <li>Information about  the field of science or technology where  your business  is active</li>
-        <li>the scientific  or technological challenge you are trying to overcome</li>
-        <li>the work you did in  the tax year to resolve  the challenge</li>
-        <li>how the  results of the work represent  an advancement in  science or technology</li>
-      </ul>
+        <li>For example, any shortcomings or limitations in the scientific or technological knowledge that prevented you from achieving your project objective</li>
+        </ul>
     </li>
+	  <li>The work already performed in the tax year, beyond activity planning </li>
     </ul>
 	</details>
 	<h2>Contact</h2>
