--- a/cops/payments-paiements/en/options-inperson.html
+++ b/cops/payments-paiements/en/options-inperson.html
@@ -64,6 +64,7 @@
 	  <li><a href="#h4">Wire transfer payment</a></li>
 	  <li><a href="#h5">Cash payment</a></li>
   </ul>
+	      <p><mark>May need to include 3rd party transfers (if you can walk into them), and include credit cards (to pay the 3rd party transfers).</mark></p>
 <section class="alert alert-info provisional" id="inperson-alert">
     <p>The CRA <strong>does not</strong> have pay counters at any Tax Service Office/Tax Centre.</p>
 	<p>The CRA does not endorse websites, companies, products, services, or publications. They are provided for convenience only.</p>
