--- a/cops/payments-paiements/en/options.html
+++ b/cops/payments-paiements/en/options.html
@@ -56,7 +56,8 @@
       </script>
       <main role="main" property="mainContentOfPage" class="container experimental">
   <h1 property="name" id="wb-cont" dir="ltr"><span class="stacked" role="text"><span>Options for sending a payment</span>: <span>Payments and the CRA</span></span></h1>
-   <section class="gc-srvinfo">
+   <p><mark>Need to deterimine if best way to pay, since debit/credit card payments can be made in person or online, do we place in both, or seperate in a different way.</mark></p>
+	      <section class="gc-srvinfo">
     <h2 class="wb-inv">Services and information</h2>
     <div class="wb-eqht row mrgn-bttm-lg">
 	  <div class="col-lg-4 col-md-6">
