--- a/cops/payments-paiements/en/find-payment.html
+++ b/cops/payments-paiements/en/find-payment.html
@@ -56,7 +56,9 @@
       </script>
       <main role="main" property="mainContentOfPage" class="container experimental">
 <h1 property="name" id="wb-cont" dir="ltr"><span class="stacked" role="text"><span>Follow up on a payment you made</span>: <span>Payments and the CRA</span></span></h1>
-  <section class="gc-srvinfo">
+<p><mark>Perhaps add a rescue or information about scams to provide options if a person did send a payment to a scammer.</mark></p>
+	      
+	      <section class="gc-srvinfo">
     <h2 class="wb-inv">Services and information</h2>
     <div class="wb-eqht row mrgn-bttm-lg">
       <div class="col-lg-4 col-md-6">
