--- a/cops/payments-paiements/en/prepare-payment.html
+++ b/cops/payments-paiements/en/prepare-payment.html
@@ -60,7 +60,14 @@
     <h2 class="wb-inv">Services and information</h2>
     <div class="wb-eqht row mrgn-bttm-lg">
 	    
-      
+       <div class="col-lg-4 col-md-6">
+	       <mark>
+        <section>
+          <h3><a href="#">Determine if you owe</a></h3>
+          <p>Need something high level to relate to scams. This can be information to determine if the call received was a scam or legitimate.</p>
+        </section>
+	       </mark>
+      </div>
 		 <div class="col-lg-4 col-md-6">
         <section>
           <h3><a href="#">Determine how much or why you owe</a></h3>
