--- a/cops/payments-paiements/en/payment-plan.html
+++ b/cops/payments-paiements/en/payment-plan.html
@@ -57,6 +57,7 @@
       <main role="main" property="mainContentOfPage" class="container experimental">
 <h1 property="name" id="wb-cont" dir="ltr"><span class="stacked" role="text"><span>Cannot pay in full or on time</span>: <span>Payments and the CRA</span></span></h1>
 	      <p><mark><strong>content for lead in statement for topics, or a new topic page (e.g. Making payments towards your debt)</strong>: Making a payment to CRA when you owe is very important.  There are many options to pay if you cannot pay in full, but the most important part is make payments as quickly and as often as possible.</mark></p>
+	  
 	      <section class="gc-srvinfo">
     <h2 class="wb-inv">Services and information</h2>
     <div class="wb-eqht row mrgn-bttm-lg">
@@ -81,12 +82,12 @@
           <p>Summary of the information or tasks that can be accomplished on the sub-topic page. Remove prose or promotional messaging. Use action verbs. </p>
         </section>
       </div>	
-   <!--<div class="col-lg-4 col-md-6">
+  <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/when-you-money-collections-cra.html">Collections at the CRA</a></h3>
-          <p>Summary of the information or tasks that can be accomplished on the sub-topic page. Remove prose or promotional messaging. Use action verbs. </p>
+          <h3><mark><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/when-you-money-collections-cra.html">Collection policies at the CRA</a></mark></h3>
+          <p><mark>Specific information about specialized collection policies that my diverge from typical collection policies (e.g. customs debt has a publication that might have specific information). Could also provide information about how debts are applied (and what might be owed back to the taxpayer that could be applied to other debts).</mark></p>
         </section>
-      </div>//-->
+      </div>
      
      
     </div>
